bindings/swift/Sources/CProven/include/proven.h


typedef enum ProvenStatus {
    PROVEN_OK = 0,
    PROVEN_ERR_NULL_POINTER = -1,
    PROVEN_ERR_INVALID_ARGUMENT = -2,
    PROVEN_ERR_OVERFLOW = -3,
    PROVEN_ERR_UNDERFLOW = -4,
    PROVEN_ERR_DIVISION_BY_ZERO = -5,
    PROVEN_ERR_PARSE_FAILURE = -6,
    PROVEN_ERR_VALIDATION_FAILED = -7,
    PROVEN_ERR_OUT_OF_BOUNDS = -8,
    PROVEN_ERR_ENCODING_ERROR = -9,
    PROVEN_ERR_ALLOCATION_FAILED = -10,
    PROVEN_ERR_NOT_IMPLEMENTED = -99
} ProvenStatus;
typedef struct ProvenIntResult {
    ProvenStatus status;
    int64_t value;
} ProvenIntResult;
typedef struct ProvenBoolResult {
    ProvenStatus status;
    bool value;
} ProvenBoolResult;
typedef struct ProvenStringResult {
    ProvenStatus status;
    char* value;
    size_t length;
} ProvenStringResult;
typedef struct ProvenFloatResult {
    ProvenStatus status;
    double value;
} ProvenFloatResult;
int32_t proven_init(void);
void proven_deinit(void);
bool proven_is_initialized(void);
void proven_free_string(char* ptr);
ProvenIntResult proven_math_div(int64_t numerator, int64_t denominator);
ProvenIntResult proven_math_mod(int64_t numerator, int64_t denominator);
ProvenIntResult proven_math_add_checked(int64_t a, int64_t b);
ProvenIntResult proven_math_sub_checked(int64_t a, int64_t b);
ProvenIntResult proven_math_mul_checked(int64_t a, int64_t b);
ProvenIntResult proven_math_abs_safe(int64_t n);
int64_t proven_math_clamp(int64_t lo, int64_t hi, int64_t value);
ProvenIntResult proven_math_pow_checked(int64_t base, uint32_t exp);
ProvenBoolResult proven_string_is_valid_utf8(const uint8_t* ptr, size_t len);
ProvenStringResult proven_string_escape_sql(const uint8_t* ptr, size_t len);
ProvenStringResult proven_string_escape_html(const uint8_t* ptr, size_t len);
ProvenStringResult proven_string_escape_js(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_path_has_traversal(const uint8_t* ptr, size_t len);
ProvenStringResult proven_path_sanitize_filename(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_crypto_constant_time_eq(
    const uint8_t* ptr1, size_t len1,
    const uint8_t* ptr2, size_t len2
);
ProvenStatus proven_crypto_random_bytes(uint8_t* ptr, size_t len);
ProvenBoolResult proven_email_is_valid(const uint8_t* ptr, size_t len);
typedef struct ProvenIPv4Address {
    uint8_t octets[4];
} ProvenIPv4Address;
typedef struct ProvenIPv4Result {
    ProvenStatus status;
    ProvenIPv4Address address;
} ProvenIPv4Result;
ProvenIPv4Result proven_network_parse_ipv4(const uint8_t* ptr, size_t len);
bool proven_network_ipv4_is_private(ProvenIPv4Address addr);
bool proven_network_ipv4_is_loopback(ProvenIPv4Address addr);
ProvenFloatResult proven_float_div(double a, double b);
bool proven_float_is_finite(double x);
bool proven_float_is_nan(double x);
ProvenFloatResult proven_float_sqrt(double x);
ProvenFloatResult proven_float_ln(double x);
ProvenBoolResult proven_json_is_valid(const uint8_t* ptr, size_t len);
double proven_angle_deg_to_rad(double degrees);
double proven_angle_rad_to_deg(double radians);
double proven_angle_normalize_degrees(double degrees);
double proven_angle_normalize_radians(double radians);
typedef struct ProvenRGBColor {
    uint8_t r;
    uint8_t g;
    uint8_t b;
} ProvenRGBColor;
typedef struct ProvenHSLColor {
    double h;
    double s;
    double l;
} ProvenHSLColor;
typedef struct ProvenColorResult {
    ProvenStatus status;
    ProvenRGBColor color;
} ProvenColorResult;
ProvenColorResult proven_color_parse_hex(const uint8_t* ptr, size_t len);
ProvenHSLColor proven_color_rgb_to_hsl(ProvenRGBColor rgb);
ProvenStringResult proven_color_to_hex(ProvenRGBColor rgb);
typedef enum ProvenLengthUnit {
    PROVEN_LENGTH_METERS = 0,
    PROVEN_LENGTH_KILOMETERS = 1,
    PROVEN_LENGTH_CENTIMETERS = 2,
    PROVEN_LENGTH_MILLIMETERS = 3,
    PROVEN_LENGTH_FEET = 4,
    PROVEN_LENGTH_INCHES = 5,
    PROVEN_LENGTH_MILES = 6,
    PROVEN_LENGTH_YARDS = 7
} ProvenLengthUnit;
typedef enum ProvenTempUnit {
    PROVEN_TEMP_CELSIUS = 0,
    PROVEN_TEMP_FAHRENHEIT = 1,
    PROVEN_TEMP_KELVIN = 2
} ProvenTempUnit;
ProvenFloatResult proven_unit_convert_length(double value, ProvenLengthUnit from, ProvenLengthUnit to);
ProvenFloatResult proven_unit_convert_temp(double value, ProvenTempUnit from, ProvenTempUnit to);
typedef struct ProvenGeoCoordinate {
    double lat;
    double lon;
} ProvenGeoCoordinate;
typedef struct ProvenGeoResult {
    ProvenStatus status;
    ProvenGeoCoordinate coord;
} ProvenGeoResult;
ProvenGeoResult proven_geo_validate(double lat, double lon);
ProvenFloatResult proven_geo_distance(ProvenGeoCoordinate a, ProvenGeoCoordinate b);
ProvenIntResult proven_checksum_crc32(const uint8_t* ptr, size_t len);
double proven_probability_create(double value);
double proven_probability_and(double a, double b);
double proven_probability_or_exclusive(double a, double b);
double proven_probability_not(double p);
ProvenStringResult proven_hex_encode(const uint8_t* ptr, size_t len, bool uppercase);
typedef struct ProvenHexDecodeResult {
    ProvenStatus status;
    uint8_t* data;
    size_t length;
} ProvenHexDecodeResult;
ProvenHexDecodeResult proven_hex_decode(const uint8_t* ptr, size_t len);
typedef struct ProvenUUID {
    uint8_t bytes[16];
} ProvenUUID;
typedef struct ProvenUUIDResult {
    ProvenStatus status;
    ProvenUUID uuid;
} ProvenUUIDResult;
ProvenUUIDResult proven_uuid_v4(void);
ProvenStringResult proven_uuid_to_string(ProvenUUID uuid);
ProvenUUIDResult proven_uuid_parse(const uint8_t* ptr, size_t len);
bool proven_uuid_is_nil(ProvenUUID uuid);
uint8_t proven_uuid_version(ProvenUUID uuid);
ProvenBoolResult proven_header_has_crlf(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_header_is_valid_name(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_header_is_dangerous(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_cookie_has_injection(const uint8_t* ptr, size_t len);
ProvenIntResult proven_cookie_get_prefix(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_content_type_can_sniff_dangerous(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_content_type_is_json(
    const uint8_t* subtype_ptr, size_t subtype_len,
    const uint8_t* suffix_ptr, size_t suffix_len
);
ProvenBoolResult proven_content_type_is_xml(
    const uint8_t* subtype_ptr, size_t subtype_len,
    const uint8_t* suffix_ptr, size_t suffix_len
);
ProvenStatus proven_ml_softmax(const double* input, double* output, size_t len);
double proven_ml_sigmoid(double x);
double proven_ml_relu(double x);
typedef struct ProvenPasswordResult {
    ProvenStatus status;
    uint32_t score;
    bool has_uppercase;
    bool has_lowercase;
    bool has_digit;
    bool has_special;
} ProvenPasswordResult;
ProvenPasswordResult proven_password_validate(const uint8_t* ptr, size_t len);
bool proven_password_is_common(const uint8_t* ptr, size_t len);