bindings/arduino/Proven.h


enum class Status : int8_t {
    Ok = 0,
    ErrNullPointer = -1,
    ErrInvalidArgument = -2,
    ErrOverflow = -3,
    ErrUnderflow = -4,
    ErrDivisionByZero = -5,
    ErrParseFailure = -6,
    ErrValidationFailed = -7,
    ErrOutOfBounds = -8,
    ErrEncodingError = -9,
    ErrBufferFull = -10,
    ErrBufferEmpty = -11,
    ErrTimeout = -12,
    ErrCircuitOpen = -13,
    ErrRateLimited = -14,
    ErrInvalidState = -15
};
template<typename T>
inline Result<T> Ok(T value) {
    return Result<T>(Status::Ok, value);
}
struct IPv4Address {
    uint8_t octets[4];
    bool valid;
};
struct UUID {
    uint8_t bytes[16];
};
enum class JsonType : uint8_t {
    Null = 0,
    Bool,
    Number,
    String,
    Array,
    Object,
    Invalid = 0xFF
};
struct RGB {
    uint8_t r;
    uint8_t g;
    uint8_t b;
};
enum class UnitType : uint8_t {
    Length,
    Mass,
    Temperature,
    Time,
    Volume
};
enum class PasswordStrength : uint8_t {
    VeryWeak = 0,
    Weak = 1,
    Fair = 2,
    Strong = 3,
    VeryStrong = 4
};