bindings/elixir/native/proven_nif/src/lib.rs

// SPDX-License-Identifier: PMPL-1.0-or-later
// Copyright (c) 2026 Jonathan D.A. Jewell (hyperpolymath) <jonathan.jewell@open.ac.uk>

//! Rustler NIF bindings for the Proven safety library.
//!
//! This module provides NIF (Native Implemented Functions) for Elixir
//! that wrap the libproven shared library. ALL computation is performed
//! by Idris 2 verified code via the Zig FFI layer; this Rust code is
//! purely a marshaling wrapper between Erlang terms and C ABI types.

use rustler::{Atom, Binary, Encoder, Env, NifResult, OwnedBinary, Term};

// ---------------------------------------------------------------------------
// Atom definitions
// ---------------------------------------------------------------------------

mod atoms {
    rustler::atoms! {
        ok,
        error,
        // Error reasons (mirror ProvenStatus from libproven)
        null_pointer,
        invalid_argument,
        overflow,
        underflow,
        division_by_zero,
        parse_failure,
        validation_failed,
        out_of_bounds,
        encoding_error,
        allocation_failed,
        not_implemented,
        // Additional error reasons
        nan,
        infinity,
        negative_input,
        non_positive_input,
        invalid_format,
        invalid_email,
        invalid_url,
        invalid_ipv4,
        traversal_detected,
        invalid_hex,
        odd_length,
        length_mismatch,
        invalid_uuid,
        unknown_currency,
        currency_mismatch,
        invalid_phone,
        missing_country_code,
        invalid_json,
        payload_too_large,
        max_depth_exceeded,
        invalid_version,
        invalid_date,
        invalid_timestamp,
        empty_input,
        unknown_unit,
        below_absolute_zero,
        // Bool results
        true_atom = "true",
        false_atom = "false",
    }
}

// ---------------------------------------------------------------------------
// libproven C ABI types (must match ffi/zig/src/main.zig exactly)
// ---------------------------------------------------------------------------

/// Status codes returned by libproven functions.
#[repr(i32)]
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
#[allow(dead_code)]
enum ProvenStatus {
    Ok = 0,
    ErrNullPointer = -1,
    ErrInvalidArgument = -2,
    ErrOverflow = -3,
    ErrUnderflow = -4,
    ErrDivisionByZero = -5,
    ErrParseFailure = -6,
    ErrValidationFailed = -7,
    ErrOutOfBounds = -8,
    ErrEncodingError = -9,
    ErrAllocationFailed = -10,
    ErrNotImplemented = -99,
}

/// Result for integer operations.
#[repr(C)]
#[derive(Debug, Clone, Copy)]
struct IntResult {
    status: ProvenStatus,
    value: i64,
}

/// Result for boolean operations.
#[repr(C)]
#[derive(Debug, Clone, Copy)]
struct BoolResult {
    status: ProvenStatus,
    value: bool,
}

/// Result for string operations (caller must free the string via proven_free_string).
#[repr(C)]
#[derive(Debug, Clone, Copy)]
struct StringResult {
    status: ProvenStatus,
    value: *mut u8,
    length: usize,
}

/// Result for float operations.
#[repr(C)]
#[derive(Debug, Clone, Copy)]
struct FloatResult {
    status: ProvenStatus,
    value: f64,
}

/// IPv4 address.
#[repr(C)]
#[derive(Debug, Clone, Copy)]
struct IPv4Address {
    octets: [u8; 4],
}

/// Result for IPv4 parsing.
#[repr(C)]
#[derive(Debug, Clone, Copy)]
struct IPv4Result {
    status: ProvenStatus,
    address: IPv4Address,
}

/// RGB color.
#[repr(C)]
#[derive(Debug, Clone, Copy)]
struct RGBColor {
    r: u8,
    g: u8,
    b: u8,
}

/// HSL color.
#[repr(C)]
#[derive(Debug, Clone, Copy)]
struct HSLColor {
    h: f64,
    s: f64,
    l: f64,
}

/// Color parse result.
#[repr(C)]
#[derive(Debug, Clone, Copy)]
struct ColorParseResult {
    status: ProvenStatus,
    color: RGBColor,
}

/// Geographic coordinate.
#[repr(C)]
#[derive(Debug, Clone, Copy)]
struct GeoCoordinate {
    latitude: f64,
    longitude: f64,
}

/// Geo result.
#[repr(C)]
#[derive(Debug, Clone, Copy)]
struct GeoResult {
    status: ProvenStatus,
    coordinate: GeoCoordinate,
}

/// Hex decode result.
#[repr(C)]
#[derive(Debug, Clone, Copy)]
struct HexDecodeResult {
    status: ProvenStatus,
    data: *mut u8,
    length: usize,
}

/// UUID (128-bit).
#[repr(C)]
#[derive(Debug, Clone, Copy)]
struct UUID {
    bytes: [u8; 16],
}

/// UUID result.
#[repr(C)]
#[derive(Debug, Clone, Copy)]
struct UUIDResult {
    status: ProvenStatus,
    uuid: UUID,
}

/// Password strength.
#[repr(i32)]
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
#[allow(dead_code)]
enum PasswordStrength {
    VeryWeak = 0,
    Weak = 1,
    Fair = 2,
    Strong = 3,
    VeryStrong = 4,
}

/// Password result.
#[repr(C)]
#[derive(Debug, Clone, Copy)]
struct PasswordResult {
    status: ProvenStatus,
    strength: PasswordStrength,
    score: u32,
    has_upper: bool,
    has_lower: bool,
    has_digit: bool,
    has_special: bool,
}

/// Length unit enum (must match Zig LengthUnit).
#[repr(i32)]
#[derive(Debug, Clone, Copy)]
#[allow(dead_code)]
enum LengthUnit {
    Meter = 0,
    Kilometer = 1,
    Centimeter = 2,
    Millimeter = 3,
    Mile = 4,
    Yard = 5,
    Foot = 6,
    Inch = 7,
    NauticalMile = 8,
}

/// Temperature unit enum (must match Zig TempUnit).
#[repr(i32)]
#[derive(Debug, Clone, Copy)]
#[allow(dead_code)]
enum TempUnit {
    Celsius = 0,
    Fahrenheit = 1,
    Kelvin = 2,
}

// ---------------------------------------------------------------------------
// libproven extern declarations
// ---------------------------------------------------------------------------

#[link(name = "proven")]
extern "C" {
    // --- Memory management ---
    fn proven_free_string(ptr: *mut u8);

    // --- Initialization ---
    fn proven_init() -> i32;
    fn proven_deinit();
    fn proven_is_initialized() -> bool;

    // --- SafeMath ---
    fn proven_math_div(numerator: i64, denominator: i64) -> IntResult;
    fn proven_math_mod(numerator: i64, denominator: i64) -> IntResult;
    fn proven_math_add_checked(a: i64, b: i64) -> IntResult;
    fn proven_math_sub_checked(a: i64, b: i64) -> IntResult;
    fn proven_math_mul_checked(a: i64, b: i64) -> IntResult;
    fn proven_math_abs_safe(n: i64) -> IntResult;
    fn proven_math_clamp(lo: i64, hi: i64, value: i64) -> i64;
    fn proven_math_pow_checked(base: i64, exp: u32) -> IntResult;

    // --- SafeString ---
    fn proven_string_escape_html(ptr: *const u8, len: usize) -> StringResult;
    fn proven_string_escape_sql(ptr: *const u8, len: usize) -> StringResult;
    fn proven_string_escape_js(ptr: *const u8, len: usize) -> StringResult;
    fn proven_string_is_valid_utf8(ptr: *const u8, len: usize) -> BoolResult;

    // --- SafePath ---
    fn proven_path_has_traversal(ptr: *const u8, len: usize) -> BoolResult;
    fn proven_path_sanitize_filename(ptr: *const u8, len: usize) -> StringResult;

    // --- SafeEmail ---
    fn proven_email_is_valid(ptr: *const u8, len: usize) -> BoolResult;

    // --- SafeNetwork ---
    fn proven_network_parse_ipv4(ptr: *const u8, len: usize) -> IPv4Result;
    fn proven_network_ipv4_is_private(addr: IPv4Address) -> bool;
    fn proven_network_ipv4_is_loopback(addr: IPv4Address) -> bool;

    // --- SafeCrypto ---
    fn proven_crypto_constant_time_eq(
        ptr1: *const u8,
        len1: usize,
        ptr2: *const u8,
        len2: usize,
    ) -> BoolResult;
    fn proven_crypto_random_bytes(ptr: *mut u8, len: usize) -> ProvenStatus;

    // --- SafeFloat ---
    fn proven_float_div(a: f64, b: f64) -> FloatResult;
    fn proven_float_is_finite(x: f64) -> bool;
    fn proven_float_is_nan(x: f64) -> bool;
    fn proven_float_sqrt(x: f64) -> FloatResult;
    fn proven_float_ln(x: f64) -> FloatResult;

    // --- SafeHex ---
    fn proven_hex_encode(ptr: *const u8, len: usize, uppercase: bool) -> StringResult;
    fn proven_hex_decode(ptr: *const u8, len: usize) -> HexDecodeResult;

    // --- SafeUUID ---
    fn proven_uuid_v4() -> UUIDResult;
    fn proven_uuid_parse(ptr: *const u8, len: usize) -> UUIDResult;
    fn proven_uuid_to_string(uuid: UUID) -> StringResult;
    fn proven_uuid_is_nil(uuid: UUID) -> bool;
    fn proven_uuid_version(uuid: UUID) -> u8;

    // --- SafeHeader ---
    fn proven_header_has_crlf(ptr: *const u8, len: usize) -> BoolResult;
    fn proven_header_is_valid_name(ptr: *const u8, len: usize) -> BoolResult;
    fn proven_header_is_dangerous(ptr: *const u8, len: usize) -> BoolResult;

    // --- SafeCookie ---
    fn proven_cookie_has_injection(ptr: *const u8, len: usize) -> BoolResult;
    fn proven_cookie_get_prefix(ptr: *const u8, len: usize) -> IntResult;

    // --- SafeContentType ---
    fn proven_content_type_can_sniff_dangerous(ptr: *const u8, len: usize) -> BoolResult;
    fn proven_content_type_is_json(
        subtype_ptr: *const u8,
        subtype_len: usize,
        suffix_ptr: *const u8,
        suffix_len: usize,
    ) -> BoolResult;
    fn proven_content_type_is_xml(
        subtype_ptr: *const u8,
        subtype_len: usize,
        suffix_ptr: *const u8,
        suffix_len: usize,
    ) -> BoolResult;

    // --- SafePassword ---
    fn proven_password_validate(ptr: *const u8, len: usize) -> PasswordResult;
    fn proven_password_is_common(ptr: *const u8, len: usize) -> bool;

    // --- SafeColor ---
    fn proven_color_parse_hex(ptr: *const u8, len: usize) -> ColorParseResult;
    fn proven_color_rgb_to_hsl(rgb: RGBColor) -> HSLColor;
    fn proven_color_to_hex(rgb: RGBColor) -> StringResult;

    // --- SafeAngle ---
    fn proven_angle_deg_to_rad(degrees: f64) -> f64;
    fn proven_angle_rad_to_deg(radians: f64) -> f64;
    fn proven_angle_normalize_degrees(degrees: f64) -> f64;
    fn proven_angle_normalize_radians(radians: f64) -> f64;

    // --- SafeUnit ---
    fn proven_unit_convert_length(value: f64, from: LengthUnit, to: LengthUnit) -> FloatResult;
    fn proven_unit_convert_temp(value: f64, from: TempUnit, to: TempUnit) -> FloatResult;

    // --- SafeGeo ---
    fn proven_geo_validate(lat: f64, lon: f64) -> GeoResult;
    fn proven_geo_distance(a: GeoCoordinate, b: GeoCoordinate) -> FloatResult;

    // --- SafeChecksum ---
    fn proven_checksum_crc32(ptr: *const u8, len: usize) -> IntResult;

    // --- SafeProbability ---
    fn proven_probability_create(value: f64) -> f64;
    fn proven_probability_and(a: f64, b: f64) -> f64;
    fn proven_probability_or_exclusive(a: f64, b: f64) -> f64;
    fn proven_probability_not(p: f64) -> f64;

    // --- SafeML ---
    fn proven_ml_softmax(input: *const f64, output: *mut f64, len: usize) -> ProvenStatus;
    fn proven_ml_sigmoid(x: f64) -> f64;
    fn proven_ml_relu(x: f64) -> f64;

    // --- SafeJson ---
    fn proven_json_is_valid(ptr: *const u8, len: usize) -> BoolResult;
}

// ---------------------------------------------------------------------------
// Helpers
// ---------------------------------------------------------------------------

/// Convert ProvenStatus to an Elixir error atom.
fn status_to_atom(status: ProvenStatus) -> Atom {
    match status {
        ProvenStatus::Ok => atoms::ok(),
        ProvenStatus::ErrNullPointer => atoms::null_pointer(),
        ProvenStatus::ErrInvalidArgument => atoms::invalid_argument(),
        ProvenStatus::ErrOverflow => atoms::overflow(),
        ProvenStatus::ErrUnderflow => atoms::underflow(),
        ProvenStatus::ErrDivisionByZero => atoms::division_by_zero(),
        ProvenStatus::ErrParseFailure => atoms::parse_failure(),
        ProvenStatus::ErrValidationFailed => atoms::validation_failed(),
        ProvenStatus::ErrOutOfBounds => atoms::out_of_bounds(),
        ProvenStatus::ErrEncodingError => atoms::encoding_error(),
        ProvenStatus::ErrAllocationFailed => atoms::allocation_failed(),
        ProvenStatus::ErrNotImplemented => atoms::not_implemented(),
    }
}
